[gd_scene load_steps=18 format=3 uid="uid://bqohqy0geb4va"]

[ext_resource type="Script" uid="uid://x2mfrinou0ev" path="res://Assets/Scripts/Characters/Enemies/BaseEnemy.gd" id="1_ib1x8"]
[ext_resource type="Script" uid="uid://bxsgjqvvic3x0" path="res://Assets/Scripts/Components/Handlers/Health/EnemyHealthHandler.gd" id="2_xjsf5"]
[ext_resource type="Texture2D" uid="uid://dwg44hyw5ca03" path="res://Assets/Art/Placeholder/prototype-magi-enemy.png" id="3_tneeu"]
[ext_resource type="Script" uid="uid://cs7oml2aclx6j" path="res://Assets/Scripts/Components/HurtBox.gd" id="4_go7xs"]
[ext_resource type="Script" uid="uid://ddul17tjgk3eg" path="res://Assets/Scripts/Components/MovementHandler.gd" id="5_3g4m1"]
[ext_resource type="Script" uid="uid://ctdfwf3huvtsi" path="res://Assets/Scripts/Components/Controllers/AnimationController.gd" id="6_5dfys"]
[ext_resource type="Script" uid="uid://dabmad52n3uq7" path="res://Assets/Scripts/State Machines/EnemyAIStateMachine/EnemyAIStateMachine.gd" id="7_rydyq"]
[ext_resource type="Script" uid="uid://dvaa51eysnpop" path="res://Assets/Scripts/State Machines/EnemyAIStateMachine/States/EnemyMovementState.gd" id="8_83s3b"]
[ext_resource type="Script" uid="uid://c4r57oepjkm3b" path="res://Assets/Scripts/Components/Controllers/EnemyMovementAI/RandomMovementAI.gd" id="9_g7svk"]
[ext_resource type="Script" uid="uid://ct1bxoorfuiu0" path="res://Assets/Scripts/Components/Handlers/EnemyAttacks/ContactDamageHandler.gd" id="10_86s2d"]
[ext_resource type="PackedScene" uid="uid://ddhl25xwvn0tp" path="res://Assets/Scenes/Components/hit_box.tscn" id="11_4fl8l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w1ox"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onc88"]
size = Vector2(64, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_5w1ox"]
radius = 45.3982

[sub_resource type="Animation" id="Animation_4moko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fhjy0"]
resource_name = "hurt"
length = 0.2
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.395329, 0.349177, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4moko"]
_data = {
&"RESET": SubResource("Animation_4moko"),
&"hurt": SubResource("Animation_fhjy0")
}

[node name="Enemy" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 16
collision_mask = 19
script = ExtResource("1_ib1x8")
metadata/_custom_type_script = "uid://x2mfrinou0ev"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_tneeu")
hframes = 6
vframes = 4
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 384, 256)

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_5w1ox")

[node name="HurtBox" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 64
collision_mask = 22
script = ExtResource("4_go7xs")

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBox"]
modulate = Color(1, 0, 0, 1)
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_onc88")

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 27

[node name="DetectionShape" type="CollisionShape2D" parent="EnemyDetection"]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_5w1ox")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
anim_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationTree"]
libraries = {
&"": SubResource("AnimationLibrary_4moko")
}
script = ExtResource("6_5dfys")

[node name="HealthController" type="Node" parent="."]
script = ExtResource("2_xjsf5")
metadata/_custom_type_script = "uid://bxsgjqvvic3x0"

[node name="MovementHandler" type="Node" parent="."]
script = ExtResource("5_3g4m1")
base_max_speed = 250.0
base_acceleration = 200.0
base_friction = 200.0
metadata/_custom_type_script = "uid://ddul17tjgk3eg"

[node name="EnemyAIStateMachine" type="Node" parent="."]
script = ExtResource("7_rydyq")
metadata/_custom_type_script = "uid://dabmad52n3uq7"

[node name="Roaming" type="Node" parent="EnemyAIStateMachine" node_paths=PackedStringArray("movement_ai")]
script = ExtResource("8_83s3b")
movement_ai = NodePath("RandomMovementAI")
metadata/_custom_type_script = "uid://dvaa51eysnpop"

[node name="RandomMovementAI" type="Node" parent="EnemyAIStateMachine/Roaming"]
script = ExtResource("9_g7svk")
metadata/_custom_type_script = "uid://c4r57oepjkm3b"

[node name="ContactDamageHandler" type="Node2D" parent="." node_paths=PackedStringArray("HitBox")]
script = ExtResource("10_86s2d")
HitBox = NodePath("HitBox")

[node name="HitBox" parent="ContactDamageHandler" instance=ExtResource("11_4fl8l")]

[node name="HitBoxShape" type="CollisionShape2D" parent="ContactDamageHandler/HitBox"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_onc88")
debug_color = Color(0.905882, 0.447059, 1, 0.623529)

[connection signal="contacted" from="HurtBox" to="HealthController" method="take_damage"]
[connection signal="damaged" from="HealthController" to="AnimationTree/AnimationPlayer" method="_on_take_damage"]
[connection signal="collections_in_area" from="ContactDamageHandler/HitBox" to="ContactDamageHandler" method="_on_check_hit"]
